# rust_general

./: README.md  github.sh
basics/src/: main.rs
bevy_basics/: Cargo.toml
bevy_basics/src/: main.rs
bevy_into/: Cargo.toml
bevy_into/src/: main.rs
calculator_proj/: Cargo.toml
calculator_proj/src/: main.rs
ggez_basics/: Cargo.toml
ggez_basics/src/: main.rs
ggez_intro/: Cargo.toml
ggez_intro/src/: main.rs
learning_basics/: Cargo.toml
learning_basics/src/: main.rs
plotters_learn/: Cargo.toml
plotters_learn/src/: main.rs
projects/bevy_projects/flappy_bavy/: Cargo.toml
projects/bevy_projects/flappy_bavy/src/: core.rs  main.rs  systems.rs
projects/budget_manager/: Cargo.toml
projects/budget_manager/src/: main.rs
todo_proj/: Cargo.toml
todo_proj/src/: main.rs  todo_system.rs
