[package]
name = "flappy_bavy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
